--- a/sample-sigchi-a.tex
+++ b/sample-sigchi-a.tex
@@ -1,4 +1,4 @@
-\documentclass[sigchi-a]{acmart}
+\documentclass[sigchi-a, authorversion]{acmart}
 \usepackage{booktabs} % For formal tables
 \usepackage{ccicons}  % For Creative Commons citation icons
 
