--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -353,3 +353,11 @@ the command \texttt{{\char'134}thebibliography}.
 Of course, reading the source code is always useful.  The file
 \texttt{acmart.pdf} contains both the user guide and the commented
 code.
+
+\section*{Acknowledgements}
+\label{sec:acks}
+
+\begin{anonsuppress}
+  The acknowledgements are suppressed when the paper is prepared for a
+  blind review.
+\end{anonsuppress}
