--- a/acmart.dtx
+++ b/acmart.dtx
@@ -196,14 +196,14 @@
 %     \normalfont Value & Meaning\\
 %     \midrule
 %     manuscript  & A manuscript. This is the default \\
-%   acmsmall & Small format, used for CIE, CSUR, JACM, JDIQ, JEA, JERIC,
+%   acmsmall & Small single column format, used for CIE, CSUR, JACM, JDIQ, JEA, JERIC,
 %            JETC, TAAS, TACCESS, TACO, TALG, TALLIP (formerly TALIP), TCPS,
 %            TEAC, TECS, TIIS, TISSEC, TIST, TKDD, TMIS, TOCE, TOCHI, TOCL,
 %            TOCS, TOCT, TODAES, TODS, TOIS, TOIT, TOMACS, TOMM (formerly
 %            TOMCCAP), TOMPECS, TOMS, TOPC, TOPLAS, TOPS,
 %            TOS, TOSEM, TOSN, TRETS,
 %            TSAS, TSC, TSLP, TWEB\@. \\
-%           acmlarge  & Large single colummn format, used for
+%           acmlarge  & Large single column format, used for
 %          JOCCH, TAP \\
 %            acmtog   & Large double column format, used for
 %          TOG\\
@@ -212,7 +212,7 @@
 %           siggraph & Proceedings format for SIGGRAPH and SIGGRAPH
 %          Asia conferences, published in ACM Transactions on Graphics
 %          journal issues \\
-%            sigplan & Proceedings format used for SIGPLAN conferences\\
+%            sigplan & Proceedings format for SIGPLAN conferences\\
 %            sigchi  & Proceedings format for SIGCHI conferences\\
 %           sigchi-a & Format for SIGCHI extended abstract\\
 %   \bottomrule
