Give ACM metadata commands consistent names
Rename commands to match naming of other ACM-specific metadata commands:
  \articleSeq ==> \acmArticleSeq
  \isbn       ==> \acmISBN
  \doi        ==> \acmDOI

Fixes borisveytsman/acmart#16.

--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -18,7 +18,7 @@
 \acmArticle{39}
 \acmYear{2010}
 \acmMonth{3}
-\articleSeq{11}
+\acmArticleSeq{11}
 
 % Copyright
 %\setcopyright{acmcopyright}
@@ -30,7 +30,7 @@
 %\setcopyright{cagovmixed}
 
 % DOI
-\doi{0000001.0000001}
+\acmDOI{0000001.0000001}
 
 % Paper history
 \received{February 2007}
