--- a/sample-acmsmall.tex
+++ b/sample-acmsmall.tex
@@ -19,7 +19,7 @@
 \acmYear{2010}
 \acmMonth{3}
 \copyrightyear{2009}
-%\articleSeq{9}
+%\acmArticleSeq{9}
 
 % Copyright
 %\setcopyright{acmcopyright}
@@ -31,7 +31,7 @@
 %\setcopyright{cagovmixed}
 
 % DOI
-\doi{0000001.0000001}
+\acmDOI{0000001.0000001}
 
 % Paper history
 \received{February 2007}
