--- a/sample-acmtog.tex
+++ b/sample-acmtog.tex
@@ -29,7 +29,7 @@
 %\setcopyright{cagovmixed}
 
 % DOI
-\doi{0000001.0000001_2}
+\acmDOI{0000001.0000001_2}
 
 % Paper history
 \received{February 2007}
