--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -15,10 +15,10 @@
 
 
 % DOI
-\doi{10.475/123_4}
+\acmDOI{10.475/123_4}
 
 % ISBN
-\isbn{123-4567-24-567/08/06}
+\acmISBN{123-4567-24-567/08/06}
 
 %Conference
 \acmConference[WOODSTOCK'97]{ACM Woodstock conference}{July 1997}{El
