Documentation: review option does not affect line spacing

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -250,8 +250,8 @@
 %     \toprule
 %     \normalfont Option & \normalfont Default & Meaning\\
 %     \midrule
-%     review & false & A review version: doublespaced, lines are
-%     numbered, hyperlinks are colored\\
+%     review & false & A review version: lines are numbered,
+%     hyperlinks are colored\\
 %     screen & false & A screen version: hyperlinks are colored\\
 %     natbib & false & Whether to use |natbib| package (see
 %     Section~\ref{sec:ug_bibliography})\\
