Documentation: authoryear command does not exist

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -655,7 +655,7 @@
 % the details).  The document option |authorversion=true| produces the
 % special form of the copyright statement for this case.  Note that
 % you still need the \cs{setcopyright} command and (optionally)
-% \cs{authoryear} command to tell \TeX\ about the copyright owner and
+% \cs{copyrightyear} command to tell \TeX\ about the copyright owner and
 % year.  Also, you should be aware that due to the different sizes of
 % the permssion blocks for the printed version and authors' version
 % the page breaks might be different between them.
