Redefined \setcitestyle (closes issue #19).  Added doi processing for siggraph and doi numbers for sample bib

--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -1,6 +1,6 @@
 \listfiles
 \documentclass[manuscript, review, screen, natbib]{acmart}
-
+\setcitestyle{super,sort&compress}
 \usepackage{booktabs} % For formal tables
 
 \usepackage[ruled]{algorithm2e} % For algorithms
