--- a/samplebody-journals.tex
+++ b/samplebody-journals.tex
@@ -71,7 +71,7 @@ i=\lfloor(T+1)\log_b[\alpha(b-1)+1]\rfloor.
 It can be easily proven that the distribution of $i$ conforms to Equation
 (\ref{eqn:01}).
 
-So protocols \cite{Bahl-02, Culler-01,Zhou-06,Adya-01, Culler-01,
+So protocols \cite{Bahl-02, Culler-01,Zhou-06,Adya-01,
 Tzamaloukas-01, Akyildiz-01} that use RTS/CTS
 controls\footnote{RTS/CTS controls are required to be implemented by
 802.11-compliant devices. They can be used as an optional mechanism
@@ -297,8 +297,8 @@ an article in a proceedings (of a conference, symposium, workshop for example)
 with all possible elements \cite{Smith10}, an example of an enumerated
 proceedings article \cite{VanGundy07},
 an informally published work \cite{Harel78}, a doctoral dissertation \cite{Clarkson85},
-a master's thesis: \cite{anisi03}, an online document / world wide web resource \cite{Thornburg01}, \cite{Ablamowicz07},
-\cite{Poker06}, a video game (Case 1) \cite{Obama08} and (Case 2) \cite{Novak03}
+a master's thesis: \cite{anisi03}, an online document / world wide web
+resource \cite{Thornburg01, Ablamowicz07, Poker06}, a video game (Case 1) \cite{Obama08} and (Case 2) \cite{Novak03}
 and \cite{Lee05} and (Case 3) a patent \cite{JoeScientist001},
 work accepted for publication \cite{rous08}, 'YYYYb'-test for prolific author
 \cite{SaeediMEJ10} and \cite{SaeediJETC10}. Other cites might contain
