--- a/acmart.dtx
+++ b/acmart.dtx
@@ -80,7 +80,14 @@
 % minimizes users' efforts in the installation and support of the
 % package.
 %
-%
+%  I am grateful to
+%  Matthew Fluet, 
+%  John Owens,
+%  Craig Rodkin,
+%  Bernard Rous,
+%  David Shamma,
+%  Stephen Spencer
+%  and many others for their invaluable help.
 %
 %\section{User's guide}
 %\label{sec:ug}
@@ -903,14 +910,19 @@
 %
 % The Boolean option |natbib| selects whether to use |natbib| package
 % for bibliography.  If you use |natbib|, then commands like
-% \cs{citep} and \cs{citeauthor} are automatically supported.
+% \cs{citep} and \cs{citeauthor} are automatically supported.  You may
+% customize \cs{natbib} using \cs{setcitestyle} command, for example,
+% \begin{verbatim}
+% \setcitestyle{numbers,sort&compress}
+% \end{verbatim}
+% 
 %
 % ACM journals use |natbib| and the style
 % |ACM-Reference-Format-Journals|.
 %
-% ACM conference proceedings do \emph{not} use |natbib|.  SIGGRAPH
-% conferences use |acmsiggraph| style.  SIGCHI conferences use
-% |SIGCHI-Reference-Format| style.  The other conferences employ
+% Most ACM conference proceedings do \emph{not} use |natbib|.
+% SIGGRAPH conferences use |acmsiggraph| style.  SIGCHI conferences
+% use |SIGCHI-Reference-Format| style.  The other conferences employ
 % one of the four styles:
 % \begin{enumerate}
 % \item acm-abbrv
@@ -957,7 +969,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/04/26 v1.04 Typesetting articles for Association of
+[2016/04/27 v1.05 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -975,6 +987,10 @@ Computing Machinery]
 % (closes \url{https://github.com/borisveytsman/acmart/issues/9})}
 % \changes{v1.03}{2016/04/22}{Added anonsuppress environment}
 % \changes{v1.04}{2016/04/26}{Updated bibliography for siggraph}
+% \changes{v1.05}{2016/04/27}{Patched \cs{setcitestyle} command;
+% closes \url{https://github.com/borisveytsman/acmart/issues/19}}
+% \changes{v1.05}{2016/04/27}{Added processing doi numbers for
+% acmsiggraph and doi numbers for sigproc.bib}
 %
 %
 % And the driver code:
@@ -1080,7 +1096,7 @@ Computing Machinery]
 %
 %
 %
-% \begin{macro}{if@ACM@natbib}
+% \begin{macro}{\if@ACM@natbib}
 %   Whether we use natbib mode
 %    \begin{macrocode}
 \define@boolkey+{acmart.cls}[@ACM@]{natbib}[true]{%
@@ -1095,7 +1111,8 @@ Computing Machinery]
 %
 % \end{macro}
 %
-% \begin{macro}{if@ACM@anonymous}
+%
+% \begin{macro}{\if@ACM@anonymous}
 %   Whether we use anonymous mode
 %    \begin{macrocode}
 \define@boolkey+{acmart.cls}[@ACM@]{anonymous}[true]{%
@@ -1249,12 +1266,74 @@ Computing Machinery]
 \fi
 %    \end{macrocode}
 %
-% Citations:
+% Citations.  We patch \cs{setcitestyle} to allow, e.g.,
+% \cs{setcitestyle}|{sort&compress}| 
 %    \begin{macrocode}
 \if@ACM@natbib
   \RequirePackage{natbib}
   \bibpunct[, ]{[}{]}{;}{a}{}{,}
   \renewcommand{\bibfont}{\bibliofont}
+  \renewcommand\setcitestyle[1]{
+  \@for\@tempa:=#1\do
+  {\def\@tempb{round}\ifx\@tempa\@tempb
+     \renewcommand\NAT@open{(}\renewcommand\NAT@close{)}\fi
+   \def\@tempb{square}\ifx\@tempa\@tempb
+     \renewcommand\NAT@open{[}\renewcommand\NAT@close{]}\fi
+   \def\@tempb{angle}\ifx\@tempa\@tempb
+     \renewcommand\NAT@open{$<$}\renewcommand\NAT@close{$>$}\fi
+   \def\@tempb{curly}\ifx\@tempa\@tempb
+     \renewcommand\NAT@open{\{}\renewcommand\NAT@close{\}}\fi
+   \def\@tempb{semicolon}\ifx\@tempa\@tempb
+     \renewcommand\NAT@sep{;}\fi
+   \def\@tempb{colon}\ifx\@tempa\@tempb
+     \renewcommand\NAT@sep{;}\fi
+   \def\@tempb{comma}\ifx\@tempa\@tempb
+     \renewcommand\NAT@sep{,}\fi
+   \def\@tempb{authoryear}\ifx\@tempa\@tempb
+     \NAT@numbersfalse\fi
+   \def\@tempb{numbers}\ifx\@tempa\@tempb
+     \NAT@numberstrue\NAT@superfalse\fi
+   \def\@tempb{super}\ifx\@tempa\@tempb
+     \NAT@numberstrue\NAT@supertrue\fi
+   \def\@tempb{nobibstyle}\ifx\@tempa\@tempb
+     \let\bibstyle=\@gobble\fi
+   \def\@tempb{bibstyle}\ifx\@tempa\@tempb
+     \let\bibstyle=\@citestyle\fi
+   \def\@tempb{sort}\ifx\@tempa\@tempb
+     \def\NAT@sort{\@ne}\fi
+   \def\@tempb{compress}\ifx\@tempa\@tempb
+     \def\NAT@cmprs{\@ne}\fi
+   \def\@tempb{sort&compress}\ifx\@tempa\@tempb
+     \def\NAT@sort{\@ne}\def\NAT@cmprs{\@ne}\fi
+   \def\@tempb{mcite}\ifx\@tempa\@tempb
+     \let\NAT@merge\@ne\fi
+   \def\@tempb{merge}\ifx\@tempa\@tempb
+     \@ifnum{\NAT@merge<\tw@}{\let\NAT@merge\tw@}{}\fi
+   \def\@tempb{elide}\ifx\@tempa\@tempb
+     \@ifnum{\NAT@merge<\thr@@}{\let\NAT@merge\thr@@}{}\fi
+   \def\@tempb{longnamesfirst}\ifx\@tempa\@tempb
+     \NAT@longnamestrue\fi
+   \def\@tempb{nonamebreak}\ifx\@tempa\@tempb
+     \def\NAT@nmfmt#1{\mbox{\NAT@up#1}}\fi
+   \expandafter\NAT@find@eq\@tempa=\relax\@nil
+   \if\@tempc\relax\else
+     \expandafter\NAT@rem@eq\@tempc
+     \def\@tempb{open}\ifx\@tempa\@tempb
+      \xdef\NAT@open{\@tempc}\fi
+     \def\@tempb{close}\ifx\@tempa\@tempb
+      \xdef\NAT@close{\@tempc}\fi
+     \def\@tempb{aysep}\ifx\@tempa\@tempb
+      \xdef\NAT@aysep{\@tempc}\fi
+     \def\@tempb{yysep}\ifx\@tempa\@tempb
+      \xdef\NAT@yrsep{\@tempc}\fi
+     \def\@tempb{notesep}\ifx\@tempa\@tempb
+      \xdef\NAT@cmt{\@tempc}\fi
+     \def\@tempb{citesep}\ifx\@tempa\@tempb
+      \xdef\NAT@sep{\@tempc}\fi
+   \fi
+  }%
+  \NAT@@setcites
+ }
 \fi
 %    \end{macrocode}
 %
@@ -3451,7 +3530,7 @@ Computing Machinery]
 \if@ACM@review
   \newsavebox{\ACM@linecount@bx}
   \savebox{\ACM@linecount@bx}[4em][t]{\parbox[t]{4em}{%
-      \@tempcnta\@ne\relax
+      \@tempcnta\@ne\relax\normalsize\normalfont
       \loop{\color{ACMRed}\scriptsize\the\@tempcnta}\\
       \advance\@tempcnta by \@ne\ifnum\@tempcnta<\ACM@linenum\repeat}}
 \fi
