--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -99,7 +99,7 @@ just to demonstrate \LaTeX's able handling of numbering.
 Citations to articles~\cite{bowman:reasoning,
 clark:pct, braams:babel, herlihy:methodology},
 conference proceedings~\cite{clark:pct} or maybe
-books~\cite{Lamport:LaTeX, salas:calculus} listed
+books \cite{Lamport:LaTeX, salas:calculus} listed
 in the Bibliography section of your
 article will occur throughout the text of your article.
 You should use BibTeX to automatically produce this bibliography;
