--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2128,17 +2128,14 @@ Computing Machinery]
   \global\advance\num@authors by 1\relax
   \ifx\addresses\@empty
     \if@ACM@anonymous
-      \gdef\addresses{\@author{Anonymous}}%
-      \gdef\authors{Anonymous}%
+      \gdef\addresses{\@author{Anonymous Author(s)}}%
+      \gdef\authors{Anonymous Author(s)}%
     \else
       \gdef\addresses{\@author{#2}}%
       \gdef\authors{#2}%
     \fi
   \else
-    \if@ACM@anonymous
-      \g@addto@macro\addresses{\and\@author{Anonymous}}%
-      \g@addto@macro\authors{\and Anonymous}%
-    \else
+    \if@ACM@anonymous\else
       \g@addto@macro\addresses{\and\@author{#2}}%
       \g@addto@macro\authors{\and#2}%
     \fi
@@ -2146,8 +2143,6 @@ Computing Machinery]
   \if@ACM@anonymous
     \ifx\shortauthors\@empty
       \gdef\shortauthors{Anon.}%
-    \else
-      \g@addto@macro\shortauthors{\and Anon.}%
     \fi
   \else
     \def\@tempa{#1}%
@@ -2176,9 +2171,7 @@ Computing Machinery]
 %   but keep for the possible future use.
 %    \begin{macrocode}
 \newcommand{\affiliation}[2][]{%
-  \if@ACM@anonymous
-    \g@addto@macro\addresses{\affiliation{}{Address}}%
-  \else
+  \if@ACM@anonymous\else
     \g@addto@macro\addresses{\affiliation{#1}{#2}}%
   \fi}
 %    \end{macrocode}
@@ -2191,9 +2184,7 @@ Computing Machinery]
 %   but keep for the possible future use.
 %    \begin{macrocode}
 \renewcommand{\email}[2][]{%
-  \if@ACM@anonymous
-    \g@addto@macro\addresses{\email{}{e-mail}}%
-  \else
+  \if@ACM@anonymous\else
     \g@addto@macro\addresses{\email{#1}{#2}}%
   \fi}
 %    \end{macrocode}
@@ -2259,14 +2250,12 @@ Computing Machinery]
 % \begin{macro}{\authornote}
 %   Adding note to the author
 %    \begin{macrocode}
-\def\authornote#1{\g@addto@macro\addresses{\@authornotemark}%
-  \if@ACM@anonymous
-    \g@addto@macro\@authornotes{%
-      \stepcounter{footnote}\footnotetext{Author note}}%
-   \else
+\def\authornote#1{%
+  \if@ACM@anonymous\else
+    \g@addto@macro\addresses{\@authornotemark}
     \g@addto@macro\@authornotes{%
       \stepcounter{footnote}\footnotetext{#1}}%
-   \fi}
+  \fi}
 %    \end{macrocode}
 %
 % \end{macro}
