Fix documentation of \@authornotes

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -2239,7 +2239,7 @@ Computing Machinery]
 % \end{macro}
 %
 % \begin{macro}{\@authornotes}
-%   The subtitlenotes
+%   The authornotes
 %    \begin{macrocode}
 \def\@authornotes{}
 %    \end{macrocode}
