SIGPLAN: adjust figure/table labels to match guidlines
See http://sigplan.org/Resources/ProceedingsFormat

A horizontal rule should separate the figure or table content above from
the caption below, but this does not appear to be easily achieved in
with the caption package.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1635,6 +1635,8 @@ Computing Machinery]
   \or % siggraph
     \captionsetup{textfont={it}}
   \or % sigplan
+    \captionsetup{labelfont={bf},
+      textfont={normalfont}, labelsep=period, margin=\z@}
   \or % sigchi
     \captionsetup[figure]{labelfont={bf, small},
       textfont={bf, small}}
