--- a/sample-acmlarge.tex
+++ b/sample-acmlarge.tex
@@ -20,6 +20,10 @@
 \acmMonth{3}
 \acmArticleSeq{11}
 
+%\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+%\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+
+
 % Copyright
 %\setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
