--- a/sample-sigplan.tex
+++ b/sample-sigplan.tex
@@ -28,6 +28,9 @@
 
 \acmPrice{15.00}
 
+%\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+
 
 \begin{document}
 \title{SIG Proceedings Paper in LaTeX Format}
