--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -13,6 +13,9 @@
 \acmYear{2010}
 \acmMonth{3}
 
+%\acmBadgeL[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+\acmBadgeR[http://ctuning.org/ae/ppopp2016.html]{ae-logo}
+
 % Copyright
 \setcopyright{acmcopyright}
 %\setcopyright{acmlicensed}
