Revert "SIGPLAN: adjust title format to match guidelines"
This reverts commit fc6f383d8c46e812d097bd840b4edf36eb19372c.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3081,7 +3081,7 @@ Computing Machinery]
   \or % siggraph
     \@mktitle@iii
   \or % sigplan
-    \@mktitle@sigplan
+    \@mktitle@iii
   \or % sigchi
     \@mktitle@iii
   \or % sigchi-a
@@ -3126,21 +3126,6 @@ Computing Machinery]
 %    \begin{macrocode}
 \def\@mktitle@iii{\hsize=\textwidth
     \setbox\mktitle@bx=\vbox{\centering\Huge\sffamily\bfseries\noindent
-      \@title
-     \ifx\@subtitle\@empty\else
-       \par\noindent{\LARGE\mdseries\@subtitle}
-     \fi
-     \par\bigskip}}%
-%    \end{macrocode}
-%
-% \end{macro}
-%
-%
-% \begin{macro}{\@mktitle@sigplan}
-%   The version of \cs{@mktitle} for sigplan
-%    \begin{macrocode}
-\def\@mktitle@sigplan{\hsize=\textwidth
-    \setbox\mktitle@bx=\vbox{\centering\Huge\bfseries\noindent
       \@title
      \ifx\@subtitle\@empty\else
        \par\noindent{\LARGE\mdseries\@subtitle}
