SIGPLAN: adjust title format to match guidelines
See http://sigplan.org/Resources/ProceedingsFormat

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3216,7 +3216,7 @@ Computing Machinery]
   \or % siggraph
     \Huge\sffamily\bfseries
   \or % sigplan
-    \Huge\sffamily\bfseries
+    \Huge\bfseries
   \or % sigchi
     \Huge\sffamily\bfseries
   \or % sigchi-a
