SIGPLAN: add rule above figure/table captions
See http://sigplan.org/Resources/ProceedingsFormat

Spacing between figure body and figure caption is a little too large.
Spacing between table body and table caption is too small.

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1744,7 +1744,8 @@ Computing Machinery]
   \or % siggraph
     \captionsetup{textfont={it}}
   \or % sigplan
-    \captionsetup{labelfont={bf},
+    \DeclareCaptionFormat{@ACM@sigplan@capfmt}{\hrulefill\\#1#2#3}
+    \captionsetup{format=@ACM@sigplan@capfmt,labelfont={bf},
       textfont={normalfont}, labelsep=period, margin=\z@}
   \or % sigchi
     \captionsetup[figure]{labelfont={bf, small},
