Fixed footnote bugs.  Closes #24.  Closes #25.

--- a/sample-manuscript.tex
+++ b/sample-manuscript.tex
@@ -73,7 +73,7 @@ parallel transmissions among neighboring nodes. When multiple physical
 frequencies are available, it also achieves increased energy
 efficiency, demonstrating the ability to work against radio
 interference and the tolerance to a wide range of measured time
-synchronization errors.
+synchronization errors\footnote{This is an abstract footnote}.
 \end{abstract}
 
 
