--- a/sample-sigconf.tex
+++ b/sample-sigconf.tex
@@ -87,7 +87,7 @@
 \begin{abstract}
 This paper provides a sample of a \LaTeX\ document which conforms,
 somewhat loosely, to the formatting guidelines for
-ACM SIG Proceedings. 
+ACM SIG Proceedings\footnote{This is an abstract footnote}. 
 \end{abstract}
 
 %
