--- a/samplebody-conf.tex
+++ b/samplebody-conf.tex
@@ -1,6 +1,7 @@
 \section{Introduction}
 
-The \textit{proceedings} are the records of a conference.  ACM seeks
+The \textit{proceedings} are the records of a conference\footnote{This
+  is a footnote}.  ACM seeks
 to give these conference by-products a uniform, high-quality
 appearance.  To do this, ACM has some rigid requirements for the
 format of the proceedings documents: there is a specified format
