--- a/acmart.dtx
+++ b/acmart.dtx
@@ -89,6 +89,9 @@
 %  Stephen Spencer
 %  and many others for their invaluable help.
 %
+% The development version of the package is available at
+% \url{https://github.com/borisveytsman/acmart}. 
+%
 %\section{User's guide}
 %\label{sec:ug}
 %
