"must be intered" ==> "must be entered"

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -784,7 +784,7 @@
 % tables.  There are some important items to be aware of, however.
 %
 % \begin{enumerate}
-% \item The captions for figures must be intered \emph{after} the
+% \item The captions for figures must be entered \emph{after} the
 % figure bodies, and for the tables \emph{before} the table bodies.
 % \item ACM uses the standard types for figures and types and adds
 % several new ones.  In total there are follwing types:
