fix documentation for firspagestyle

--- a/acmart.dtx
+++ b/acmart.dtx
@@ -3868,7 +3868,7 @@ Computing Machinery]
 % \end{macro}
 %
 % \begin{macro}{firstpagestyle}
-%   The pagestyle for all pages but the first one
+%   The pagestyle for the first page only.
 %    \begin{macrocode}
 \fancypagestyle{firstpagestyle}{%
   \fancyhf{}%
