--- a/acmart.dtx
+++ b/acmart.dtx
@@ -1607,7 +1607,7 @@ Computing Machinery]
 \or % sigplan
    \geometry{twoside=true, head=1pc,
      paperwidth=8.5in, paperheight=11in,
-     columnsep=2pc,
+     includeheadfoot=false, columnsep=2pc,
      top=1in, bottom=1in, inner=0.75in, outer=0.75in
      }%
 \or % sigchi
