--- a/README
+++ b/README
@@ -1,2 +1,6 @@
 This package provides a class for typesetting publications of 
 Association for Computing Machinery.
+
+Changes
+
+version 1.08    SIGPLAN reformatting (Matthew Fluet); bug fixes
