--- a/acmart.dtx
+++ b/acmart.dtx
@@ -997,7 +997,7 @@
 \ProvidesFile{acmart.dtx}
 %</gobble>
 %<class>\ProvidesClass{acmart}
-[2016/05/03 v1.07 Typesetting articles for Association of
+[2016/05/13 v1.08 Typesetting articles for Association of
 Computing Machinery]
 %    \end{macrocode}
 %
@@ -1019,6 +1019,8 @@ Computing Machinery]
 % closes \url{https://github.com/borisveytsman/acmart/issues/19}}
 % \changes{v1.05}{2016/04/27}{Added processing doi numbers for
 % acmsiggraph and doi numbers for sigproc.bib}
+% \changes{v1.08}{2016/05/13}{SIGPLAN reformatting by Matthew Fluet}
+% \changes{v1.08}{2016/05/13}{Typos corrected (Tobias Pape)}
 %
 %
 % And the driver code:
